Dao层、Service层补充hyq代码，部分controller

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>数据可视化</title>
+    <title>面向智慧农业的物联网温室大棚监测系统</title>
 
     <link rel="stylesheet" href="css/index.css">
     <script src="js/jquery.js"></script>
@@ -59,15 +59,10 @@
 
             </div>
             <div class="left-cen">
-                <div class="title">工程数据可视化测试</div>
-                <ul class="company">
-                    <li>数据可视化测试：数据可视化测试</li>
-                    <li>数据可视化测试：业户编号业户编号</li>
-                    <li>数据可视化测试：数据可视化测试</li>
-                    <li>数据测试：数据测试</li>
-                    <li>温馨提示：更多模板关注公众号【DreamCoders】回复“BigDataView” 免费获取....</li>
-                </ul>
+                <div class="title">部分药材种植园面积和产量</div>
+                <div class="species-areaYield">
 
+                </div>
             </div>
             <div class="left-bottom">
                 <div class="title">数据可视化测试</div>
@@ -262,6 +257,7 @@
 <script src="js/wodry.min.js"></script>
 <script src="js/fontscroll.js"></script>
 <script src="js/echarts.js"></script>
+<script src="js/myecharts.js"></script>
 
 <script>
     /*$('#ceshi').wodry({
