--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -31,7 +31,7 @@
         <div class="header-left fl" id="time"></div>
         <div class="header-center fl">
             <div class="header-title">
-                工程数据可视化大屏中心
+                物联网温室大棚检测系统
             </div>
             <div class="header-img"></div>
         </div>
@@ -46,28 +46,29 @@
                 <!--<h1 id="ceshi">数据可视化</h1>-->
                 <div class="title">基本信息</div>
                 <div class="top-list">
-                    <p>当你征服一座山峰时，它已经在你脚下了，你必须再找一座山峰去征服，否则，你只有下山，走下坡路了</p>
+                    <p>制作人：陈嘉如 何雨晴</p>
                     <ul>
-                        <li>建筑面积：4250</li>
-                        <li>农户总数：3545户</li>
-                        <li>人口总数：1254万</li>
-                        <li>年总产值：53万</li>
-                        <li>年总产值：468万</li>
-                        <li>年总产值：7854万</li>
+                        <li>大棚名称：草木堂</li>
+                        <li>总面积：1000平方米</li>
+                        <li>温度范围：12℃-34℃</li>
+                        <li>湿度范围：50%-90%</li>
+                        <li>土壤PH值：5.5-7.0</li>
+                        <li>土壤FC值：50%-70%</li>
                     </ul>
                 </div>
 
             </div>
             <div class="left-cen">
                 <div class="title">部分药材种植园面积和产量</div>
-<!--                <div class="company" id="species-areaYield">-->
+                <!--                <div class="company" id="species-areaYield">-->
                 <div class="allnav" id="species-areaYield">
 
                 </div>
             </div>
             <div class="left-bottom">
-                <div class="title">数据可视化测试</div>
+                <div class="title">作物产量占比图</div>
                 <div class="bottom-b">
+                    <!--<div id="chart2" class="allnav"></div>-->
                     <div id="chart3" class="allnav"></div>
                 </div>
 
@@ -75,176 +76,228 @@
         </div>
         <div class="center-cen fl">
             <div class="cen-top">
+                <div class="title">今日部分数据统计</div>
                 <div class="top-title">
-                    <ul>
-                        <li>
-                            <p>数量统计</p>
-                            <span>3</span>
-                            <span>6</span>
-                            <span>5</span>
-                            <b>个</b>
-                        </li>
-                        <li>
-                            <p>同比上升</p>
-                            <span>1</span>
-                            <span>3</span>
-                            <b>%</b>
-                        </li>
-                    </ul>
+                    <!--<ul>-->
+                    <!--<li>-->
+                    <!--<p>数量统计</p>-->
+                    <!--<span>3</span>-->
+                    <!--<span>6</span>-->
+                    <!--<span>5</span>-->
+                    <!--<b>个</b>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                    <!--<p>同比上升</p>-->
+                    <!--<span>1</span>-->
+                    <!--<span>3</span>-->
+                    <!--<b>%</b>-->
+                    <!--</li>-->
+                    <!--</ul>-->
                 </div>
 
-                <div class="top-bottom">
-                    <div id="chart1" class="allnav"></div>
+                <!--中间六个图表-->
+                <div class="top-bottom" style="margin-top: 0.1rem">
+                    <!--空气温度和土壤温度-->
+                    <div id="chart1-1" class="allnav"></div>
+
+                    <div id="chart1-2" class="allnav"></div>
+
+                    <div id="chart1-3" class="allnav"></div>
+
+                    <div id="chart1-4" class="allnav"></div>
+
+                    <div id="chart1-5" class="allnav"></div>
+
+                    <div id="chart1-6" class="allnav"></div>
+
                 </div>
-
-
             </div>
-            <div class="cen-bottom">
-                <div class="title">数据可视化测试</div>
-                <div class="bottom-b">
-                    <div id="chart4" class="allnav"></div>
-                </div>
 
+            <div class="cen-bottom">
+                <div class="title">环境参数实时监控</div>
+                <div class="bottom-b">
+                    <!--<div id="chart4" class="allnav"></div>-->
+                    <div class="parameter-icons">
+                        <img src="images/airTemp.svg" alt="空气温度" class="green-icon">
+                        <img src="images/airHumidity.svg" alt="空气湿度" class="green-icon">
+                        <img src="images/lightIntensity.svg" alt="光照强度" class="green-icon">
+                        <img src="images/co2.svg" alt="CO2浓度" class="green-icon">
+                        <img src="images/soilTemp.svg" alt="土壤温度" class="green-icon">
+                        <img src="images/soilHumidity.svg" alt="土壤湿度" class="green-icon">
+                        <img src="images/soilPH.svg" alt="土壤pH值" class="green-icon">
+                        <img src="images/soilFC.svg" alt="土壤FC值" class="green-icon">
+                    </div>
+                    <div class="parameter-values" id="parameter-values">
+                        <!--<div class="parameter-value">实时温度</div>-->
+                        <!--<div class="parameter-value">实时湿度</div>-->
+                        <!--<div class="parameter-value">光照强度</div>-->
+                        <!--<div class="parameter-value">CO2浓度</div>-->
+                        <!--<div class="parameter-value">土壤温度</div>-->
+                        <!--<div class="parameter-value">土壤湿度</div>-->
+                        <!--<div class="parameter-value">土壤pH值</div>-->
+                        <!--<div class="parameter-value">土壤FC值</div>-->
+                    </div>
+                    <div class="parameter-descriptions">
+                        <div class="parameter-description">空气温度℃</div>
+                        <div class="parameter-description">空气湿度</div>
+                        <div class="parameter-description">光照强度klux</div>
+                        <div class="parameter-description">CO2浓度ppm</div>
+                        <div class="parameter-description">土壤温度℃</div>
+                        <div class="parameter-description">土壤湿度</div>
+                        <div class="parameter-description">土壤pH值</div>
+                        <div class="parameter-description">土壤FC值</div>
+                    </div>
+                    <div class="parameter-status">
+                        <div class="parameter-status-normal">正常</div>
+                        <div class="parameter-status-normal">正常</div>
+                        <div class="parameter-status-normal">正常</div>
+                        <div class="parameter-status-normal">正常</div>
+                        <div class="parameter-status-normal">正常</div>
+                        <div class="parameter-status-normal">正常</div>
+                        <div class="parameter-status-normal">正常</div>
+                        <div class="parameter-status-normal">正常</div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="center-right fr">
-            <div class="right-top">
-                <div class="title">数据可视化测试</div>
+            <!--<div class="right-top">-->
+            <!--<div class="title">数据可视化测试</div>-->
 
-                <div class="echart wenzi">
-                    <div class="gun">
-                        <span>排名</span>
-                        <span>同比</span>
-                        <span>销量</span>
-                    </div>
-                    <div id="FontScroll" class="myscroll">
-                        <ul>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>1</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>2</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>3</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>4</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>5</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>6</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>7</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>8</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>9</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>10</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>11</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
+            <!--<div class="echart wenzi">-->
+            <!--<div class="gun">-->
+            <!--<span>排名</span>-->
+            <!--<span>同比</span>-->
+            <!--<span>销量</span>-->
+            <!--</div>-->
+            <!--<div id="FontScroll" class="myscroll">-->
+            <!--<ul>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>1</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>2</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>3</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>4</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>5</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>6</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>7</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>8</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>9</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>10</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>11</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
 
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fontInner clearfix">
-                                    <span>
-                                        <b>12</b>
-                                    </span>
-                                    <span>2小时15分</span>
-                                    <span>2小时15分</span>
+            <!--</div>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<div class="fontInner clearfix">-->
+            <!--<span>-->
+            <!--<b>12</b>-->
+            <!--</span>-->
+            <!--<span>2小时15分</span>-->
+            <!--<span>2小时15分</span>-->
 
-                                </div>
-                            </li>
+            <!--</div>-->
+            <!--</li>-->
 
-                        </ul>
-                    </div>
-                </div>
+            <!--</ul>-->
+            <!--</div>-->
+            <!--</div>-->
 
-            </div>
+            <!--</div>-->
             <div class="right-cen">
-                <div class="title">数据可视化测试</div>
+                <div class="title">各作物土壤营养物质含量</div>
                 <div id="chart2" class="allnav"></div>
             </div>
             <div class="right-bottom">
-                <div class="title">数据可视化测试</div>
+                <div class="title">警报信息</div>
                 <div class="chat">
-                    <div id="chart5" class="allnav"></div>
+                    <!--<div id="chart5" class="allnav"></div>-->
+                    <div id="warn-messages"></div>
                 </div>
-
             </div>
         </div>
     </div>
